EAYOPAC-94 - Ting covers style fixes for search, mofile styles.

--- a/themes/ddbasic/sass/module/_ting_covers.scss
+++ b/themes/ddbasic/sass/module/_ting_covers.scss
@@ -110,6 +110,14 @@
   position: fixed;
 
   overflow: hidden;
+
+  @include small-medium() {
+    left: 0 !important;
+    margin-left: 5% !important;
+    width: calc(90% - 40px) !important;
+    height: 80% !important;
+    padding: 20px;
+  }
 }
 
 .reveal-modal.reveal-cover-back {
@@ -118,8 +126,20 @@
   .reveal-cover-back-image {
     height: 100%;
 
-	object {
-	  height: 100%;
-	}
+    object {
+      height: 100%;
+    }
+  }
+}
+
+.page-search-ting .ting-object .work-cover-selector {
+  a.cover-back,
+  a.cover-front {
+    height: 20px;
+    width: 20px;
+
+    &:before {
+      font-size: 20px;
+    }
   }
 }
